Fixes after testing app on real phone

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.lenovo.gardenclub">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.lenovo.gardenclub">
 
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -14,7 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ellipse"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -22,7 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".LoginProcess"/>
+        <activity android:name=".LoginProcess"
+            android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".Contact"/>
         <activity android:name=".ContactList"
                   android:windowSoftInputMode="adjustNothing">
