--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ellipse"
@@ -17,6 +16,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <uses-library android:name="org.apache.http.legacy"
+            android:required="false" />
+        
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -47,6 +58,8 @@
         <activity android:name=".MoreInfo"/>
         <activity android:name=".ContactUsActivity" />
         <activity android:name=".TourActivity" />
+        <activity android:name=".MapActivity" />
+        <activity android:name=".BellesActivity" />
         <activity android:name=".MembershipActivity" />
         <activity android:name=".ProjectsActivity" />
         <activity android:name=".BICActivity" />
