Made the directions page and created the back end code to facilitate it. Also, put numbers and letters on markers on maps page.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
     implementation 'androidx.recyclerview:recyclerview'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
 }
